--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 </head>
 <body>
     <div class="loading">
+
+        <nav>
+            <ul>
+                <li><a href="trangchu.html">Trang chủ</a></li>
+                <li><a href="index.html">Lời Chúc</a></li>
+<!-- Điều hướng đến trang "Chúc" -->
+            </ul>
+        </nav>
+        
         <div class="boxHeartImg">
             <div class="heartItem item1">
                 <img src="./image/heart.png" alt="">
