--- a/chuc.html
+++ b/chuc.html
@@ -20,13 +20,13 @@
         
         <div class="boxHeartImg">
             <div class="heartItem item1">
-                <img src="./image/heart.png" alt="">
+                <img src="./image/christmas.png" alt="">
             </div>
             <div class="heartItem item2">
-                <img src="./image/heart.png" alt="">
+                <img src="./image/bell.png" alt="">
             </div>
             <div class="heartItem item3">
-                <img src="./image/heart.png" alt="">
+                <img src="./image/christmas.png" alt="">
             </div>
         </div>
         <div class="heartBox">
